solved validation errors not showing and parsing ingredients and instructions

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,6 @@
 * {
   margin: 0; /* reset */
   padding: 0; /* reset */
-  scroll-behavior: smooth;
   box-sizing: border-box;
   font-family: Bookerly, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -11,9 +10,12 @@
 }
 
 body {
-  /* background-color: #ffffff;
-   */
+  /* background-color: #ffffff;*/
   /* height: 100%; */
+
+  /* disables form validation messages when enabled*/
+  /* scroll-behavior: smooth; */
+
   display: flex;
   flex-direction: column;
   background-color: #fcefd2;
@@ -25,7 +27,7 @@ code {
     monospace;
 }
 
-.card{
+.card {
   margin: 0 15px 30px 15px;
   max-height: 365px;
 }
@@ -35,8 +37,8 @@ code {
 }
 
 form label {
-  display:inline-block;
-  margin: 0px 0px 10px 0px ;
+  display: inline-block;
+  margin: 0px 0px 10px 0px;
 }
 
 button {
@@ -52,24 +54,25 @@ button {
   background-color: #efefef;
 }
 
-button:hover{
+button:hover {
   background-color: #fffdfd;
 }
 
-input, textarea{
+input,
+textarea {
   display: block;
-    /* width: 100%; */
-    height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  /* width: 100%; */
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 /* .page-container {
